--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,16 @@
+@article{lee2025breast,
+  title={A machine learning model for predicting breast cancer recurrence and supporting personalized treatment decisions through comprehensive feature selection and explainable ensemble learning},
+  author={Lee, Tzu-Fang and Shiau, Jen-Ping and Chen, Chien-Hung and Yun, Wei-Po and Wuu, Ching-Shui and Huang, Yi-Jung and Yeh, Shu-An and Chen, Hsuan-Chih and Chao, Po-Jui},
+  journal={Cancer Management and Research},
+  volume={17},
+  pages={917--932},
+  year={2025},
+  publisher={Dove Medical Press},
+  doi={10.2147/CMAR.S514693}
+}
+
+
+
 @article{guida2021knee,
   title={Knee osteoarthritis classification using 3D CNN and MRI},
   author={Guida, Carmine and Zhang, Ming and Shan, Juan},
