--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,16 @@
   doi={10.2147/CMAR.S514693}
 }
 
+@article{meng2021lasso,
+  title={Development of a prediction model based on LASSO regression to evaluate the risk of non-sentinel lymph node metastasis in Chinese breast cancer patients with 1--2 positive sentinel lymph nodes},
+  author={Meng, Li and Zheng, Ting and Wang, Yanan and others},
+  journal={Scientific Reports},
+  volume={11},
+  pages={19972},
+  year={2021},
+  publisher={Nature Publishing Group},
+  doi={10.1038/s41598-021-99522-3}
+}
 
 
 @article{guida2021knee,
