--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,34 @@
-@article{mceligot2020logistic,
-  title={Logistic LASSO regression for dietary intakes and breast cancer},
-  author={McEligot, Archana J and Poynor, Valerie and Sharma, Rishabh and Panangadan, Anand},
-  journal={Nutrients},
-  volume={12},
-  number={9},
-  pages={2652},
-  year={2020},
+@article{emmert2019high,
+  title={High-dimensional LASSO-based computational regression models: regularization, shrinkage, and selection},
+  author={Emmert-Streib, Frank and Dehmer, Matthias},
+  journal={Machine Learning and Knowledge Extraction},
+  volume={1},
+  number={1},
+  pages={359--383},
+  year={2019},
   publisher={MDPI}
+}
+
+@article{ranstam2018lasso,
+  title={LASSO regression},
+  author={Ranstam, Jonas and Cook, Jonathan A},
+  journal={Journal of British Surgery},
+  volume={105},
+  number={10},
+  pages={1348--1348},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{roth2004generalized,
+  title={The generalized LASSO},
+  author={Roth, Volker},
+  journal={IEEE transactions on neural networks},
+  volume={15},
+  number={1},
+  pages={16--28},
+  year={2004},
+  publisher={IEEE}
 }
 
 @article{usman2021comparing,
@@ -16,4 +38,23 @@
   volume={14},
   number={2},
   year={2021}
+}
+
+@article{teng2022dynamic,
+  title={A dynamic Bayesian model for breast cancer survival prediction},
+  author={Teng, Jing and Zhang, Honglei and Liu, Wuyi and Shu, Xiao-Ou and Ye, Fei},
+  journal={IEEE Journal of Biomedical and Health Informatics},
+  volume={26},
+  number={11},
+  pages={5716--5727},
+  year={2022},
+  publisher={IEEE}
+}
+
+@misc{nci2025statistics,
+  author       = {{National Cancer Institute}},
+  title        = {Cancer Statistics},
+  year         = {2025},
+  howpublished = {\url{https://www.cancer.gov/about-cancer/understanding/statistics}},
+  note         = {Accessed: 2026-02-09},
 }
