updated reference and intro

--- a/references.bib
+++ b/references.bib
@@ -32,7 +32,7 @@
 }
 
 @article{usman2021comparing,
-  title={COMPARING THE PREDICTION ACCURACY OF RIDGE, LASSO AND ELASTIC NET REGRESSION MODELS WITH LINEAR REGRESSION USING BREAST CANCER DATA.},
+  title={Comparing the Prediction Accuracy of Ridge, Lasso and Elastic Net Regression Models with Linear Regression Using Breast Cancer Data.},
   author={Usman, M and SIS, Doguwa and Alhaji, BB},
   journal={Bayero Journal of Pure \& Applied Sciences},
   volume={14},
