updated reference and intro

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,59 @@
+@article{hadba2024comparison,
+  title={Comparison of lasso logistic regression, artificial neural networks, and support vector machine in predicting breast cancer},
+  author={Hadba, Wakaa Ali and Naser, Hadeel Imad},
+  year={2024}
+}
+
+@inproceedings{muthukrishnan2016lasso,
+  title={LASSO: A feature selection technique in predictive modeling for machine learning},
+  author={Muthukrishnan, Ramakrishnan and Rohini, RLASSO},
+  booktitle={2016 IEEE international conference on advances in computer applications (ICACA)},
+  pages={18--20},
+  year={2016},
+  organization={Ieee}
+}
+
+@article{tibshirani1996regression,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume={58},
+  number={1},
+  pages={267--288},
+  year={1996},
+  publisher={Oxford University Press}
+}
+
+@article{huang2023practical,
+  title={A practical recurrence risk model based on Lasso-Cox regression for gastric cancer},
+  author={Huang, Binjie and Ding, Feifei and Li, Yumin},
+  journal={Journal of Cancer Research and Clinical Oncology},
+  volume={149},
+  number={17},
+  pages={15845--15854},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{xu2022lasso,
+  title={A LASSO-based survival prediction model for patients with synchronous colorectal carcinomas based on SEER},
+  author={Xu, Yuxin and Wang, Xiaojie and Huang, Ying and Ye, Daoxiong and Chi, Pan},
+  journal={Translational cancer research},
+  volume={11},
+  number={8},
+  pages={2795},
+  year={2022}
+}
+
+@article{lee2025machine,
+  title={A Machine Learning Model for Predicting Breast Cancer Recurrence and Supporting Personalized Treatment Decisions Through Comprehensive Feature Selection and Explainable Ensemble Learning},
+  author={Lee, Tsair-Fwu and Shiau, Jun-Ping and Chen, Chia-Hui and Yun, Wen-Ping and Wuu, Cheng-Shie and Huang, Yu-Jie and Yeh, Shyh-An and Chen, Hui-Chun and Chao, Pei-Ju},
+  journal={Cancer Management and Research},
+  pages={917--932},
+  year={2025},
+  publisher={Taylor \& Francis}
+}
+
 @article{emmert2019high,
   title={High-dimensional LASSO-based computational regression models: regularization, shrinkage, and selection},
   author={Emmert-Streib, Frank and Dehmer, Matthias},
@@ -32,7 +88,7 @@
 }
 
 @article{usman2021comparing,
-  title={Comparing the Prediction Accuracy of Ridge, Lasso and Elastic Net Regression Models with Linear Regression Using Breast Cancer Data.},
+  title={COMPARING THE PREDICTION ACCURACY OF RIDGE, LASSO AND ELASTIC NET REGRESSION MODELS WITH LINEAR REGRESSION USING BREAST CANCER DATA.},
   author={Usman, M and SIS, Doguwa and Alhaji, BB},
   journal={Bayero Journal of Pure \& Applied Sciences},
   volume={14},
