--- a/index.qmd
+++ b/index.qmd
@@ -23,17 +23,12 @@ to edit)
 
 ## Introduction
 
-The LASSO, Least Absolute Shrinkage and Selector Operator, regression model has become very popular over the last 30 years. The model was first introduced by Robert Tibshirani to perform variable selection and regularization to improve prediction accuracy and interpretability . Since its introduction, LASSO has been used to research topics in numerous fields including biology, computational social sciences, social media, the stock market, economy, political science, robotics, climatology, and pharmacology [@emmert2019high]. In LASSO regression, the prediction error is minimized by identifying the variables and corresponding regression coefficients and then putting constraints on the model which pushes the regression coefficients to zero [@ranstam2018lasso]. Those coefficients are then eliminated from the model reducing its complexity.
-
-LASSO reduces model complexity by adding an L1 penalty term added to the loss function which constrains the sum of the absolute values of the regression coefficients [@ranstam2018lasso]. This penalty is what shrinks the weaker predictors to zero and is effectively performing automatic variable selection [@usman2021comparing]. Due to this, LASSO regression model can still work with outliers, thus dealing with large-scale problems very efficiently [@roth2004generalized]. By reducing overfitting and emphasizing the most relevant predictors, LASSO produces a more interpretable model which is key in clinical survival modeling where interpretability and reproducibility are critical for predicting patient outcomes [@ranstam2018lasso].
-
-The goal of this analysis is to use LASSO regression to identify factors most strongly associated with survival in breast cancer patients. Cancer has a substantial impact on society worldwide. In 2025, an estimated 2,041,910 new cancer cases will be diagnosed in the United States, and approximately 618,120 people are expected to die from the disease [@nci2025statistics].
-Breast cancer represents a particularly significant public health concern. By 2019, the number of individuals living with breast cancer in the United States was estimated to exceed 3.8 million, and it remains the most frequently diagnosed cancer among women and the second most common cancer globally [@usman2021comparing] Understanding which clinical and demographic factors are most predictive in patient survival may help to improve prognostic modeling and support more informed clinical decision-making. Using the Surveillance, Epidemiology, and End Results (SEER) dataset, this analysis will determine the most prominent variables in breast cancer survivability. This dataset includes the variables age, race, marital status, T stage, N stage, 6th stage, grade, A stage, tumor size, estrogen status, progesterone status, regional node examined, regional node positive, survival months, and status.
-
-These variables will now be further defined. Age is the age at diagnosis, race is the race of the patient, and marital status at the time of diagnosis includes married (including common law), single (never married), widowed, divorced and separated. T stage is the size of the tumor where T1 is tumor ≤ 2 cm, T2 is tumor > 2 cm but ≤ 5 cm, T3 is tumor > 5cm, and T4 is a tumor that is any size which has directly invaded the chest wall, skin, or is classified as inflammatory. N stage is the number of lymph nodes involved where N1 is 1-3 positive lymph nodes, N2 is 4-9 positive lymph nodes, and N3 is 10+ positive nodes or specific node groups. 6th stage is the overall stage of cancer which includes IIA, IIB, IIC, IIIA, IIIB, and IIIC. Next is the grade of the breast cancer which is broken down into grade I, grade II, grade III, and grade IV. A stage is defined by either regional or distant. Tumor size is the size of the tumor at the time of diagnosis. Estrogen status is status of the estrogen receptor which is defined as either negative or positive. Progesterone status is the status of the progesterone receptor which is again either negative or positive. Regional node examined is whether the regional lymph nodes were examined and if so then how many. Regional node positive states how many of the regional lymph nodes were positive for cancer. Survival months states the number of months the patient survived after diagnosis. Lastly, status states whether the patient is alive or passed away [@teng2022dynamic].
-
-While LASSO regression has proven valuable across many scientific research areas, it is particularly well suited for medical research where identifying the most influential predictors is essential for improving patient outcomes.
-Using this data, the analysis applies LASSO regression to perform variable selection on the defined variables and identify the key predictors of breast cancer survival.
+The LASSO (Least Absolute Shrinkage and Selection Operator) regression model has become increasingly popular over the past 30 years. It was first introduced by Robert Tibshirani as a method for variable selection and regularization to improve prediction accuracy and interpretability. Since then, LASSO has been widely applied across many fields, including biology, computational social sciences, social media, the stock market, economics, political science, robotics, climatology, and pharmacology [@emmert2019high].
+Regression is a fundamental task in supervised machine learning, used to model relationships between variables and address key challenges such as parameter estimation and variable selection [@muthukrishnan2016lasso]. As machine learning methods continue to grow in popularity and show strong results, their importance in research has increased. In medicine especially, predictive models developed through machine learning can help professionals distinguish between risk groups, design personalized treatment plans, and improve patient survival outcomes [@huang2023practical].
+LASSO regression works by minimizing prediction error while applying a constraint that shrinks some regression coefficients toward zero [@ranstam2018lasso]. It does this by adding an L1 penalty term to the loss function, which constrains the sum of the absolute values of the coefficients [@ranstam2018lasso]. This penalty forces weaker predictors to exactly zero, effectively performing automatic variable selection [@usman2021comparing]. In other words, LASSO minimizes the residual sum of squares subject to a constraint on the absolute values of the coefficients, producing models that are simpler and easier to interpret [@tibshirani1996regression]. By reducing overfitting and focusing on the most relevant predictors, LASSO creates more interpretable models, which is especially important in clinical survival analysis where clarity and reproducibility matter [@ranstam2018lasso]. It is also effective for handling large-scale problems and high-dimensional data [@roth2004generalized].
+The goal of this analysis is to use LASSO regression to identify the factors most strongly associated with survival in breast cancer patients. Cancer continues to have a major impact worldwide. In 2025, an estimated 2,041,910 new cancer cases will be diagnosed in the United States, and approximately 618,120 people are expected to die from the disease [@nci2025statistics]. Breast cancer remains a significant public health concern. By 2019, more than 3.8 million individuals in the United States were living with breast cancer, and it is still the most commonly diagnosed cancer among women and the second most common cancer globally [@usman2021comparing]. Breast cancer begins in the breast’s feeding tissues and develops in the epithelial cells of the ducts (85% of cases) and lobules (15%). Causes include hereditary factors, age, postmenopausal obesity, alcohol or smoking, and other factors [@hadba2024comparison]. Identifying the clinical and demographic factors most strongly linked to survival can help improve prognostic models and support better clinical decision-making. Previous research has identified numerous factors associated with breast cancer prognosis and survival. These factors are commonly grouped into three categories: (1) demographic and genetic characteristics, such as age at diagnosis, marital status, and reproductive history; (2) clinicopathological factors, including tumor location, size, and histologic grade; and (3) treatment-related variables, such as drug therapy, radiotherapy, and chemotherapy [@teng2022dynamic].
+To accomplish this, the analysis uses the Surveillance, Epidemiology, and End Results (SEER) dataset to determine the most important variables associated with breast cancer survivability. SEER has collected and maintained high-quality, validated data on mortality among cancer survivors, allowing for analysis of overall and cause-specific death patterns [@xu2022lasso]. The dataset includes variables such as age, race, marital status, T stage, N stage, 6th stage, grade, A stage, tumor size, estrogen status, progesterone status, regional nodes examined, regional nodes positive, survival months, and status.
+Although LASSO regression has been valuable across many research areas, it is particularly useful in medical studies where identifying the most influential predictors is essential for improving patient outcomes. Using the SEER data, this study applies LASSO regression for feature selection to identify key clinical variables associated with breast cancer survival while reducing overfitting and improving model stability [@lee2025machine].
 
 
 ## Methods
